--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "commander": "^2.20.0",
     "dotenv": "^7.0.0",
-    "prompts": "^2.0.4"
+    "prompts": "^2.0.4",
+    "yaml": "^1.5.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
     "@types/prompts": "^1.2.0",
+    "@types/yaml": "^1.0.2",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "lint-staged": "^8.1.5",
