--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "@robb_j/create-ts-node",
+  "name": "dashund",
   "private": true,
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "repository": "robb-j/ts-node-base",
+  "main": "src/index.js",
+  "repository": "robb-j/dashund",
   "author": "Rob Anderson (https://r0b.io)",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "lint": "npx tsc --noEmit",
+    "lint": "eslint src",
     "coverage": "jest --coverage",
-    "preversion": "npm test -s && npm run build && git add dist",
+    "preversion": "npm run test -s",
     "prettier": "prettier --write '**/*.{js,ts,tsx,json,css,md}'",
-    "start": "node -r dotenv/config dist/index.js",
+    "start": "node -r dotenv/config src/index.js",
     "test": "jest",
-    "dev": "node -r ts-node/register -r dotenv/config src/experiment.ts"
+    "dev": ""
   },
   "keywords": [],
   "engines": {
     "node": ">=8"
   },
   "dependencies": {
-    "commander": "^2.20.0",
+    "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
     "prompts": "^2.0.4",
-    "yaml": "^1.5.0"
+    "yaml": "^1.5.0",
+    "yargs": "^13.2.4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
     "@types/prompts": "^1.2.0",
     "@types/yaml": "^1.0.2",
+    "@types/yargs": "^13.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
-    "prettier": "1.16.4",
-    "ts-jest": "^24.0.1",
-    "ts-node": "^8.0.3",
-    "typescript": "^3.4.1"
+    "prettier": "1.16.4"
   },
   "prettier": {
     "semi": false,
@@ -55,14 +60,6 @@
     "*.{js,ts,tsx,json,css,md}": [
       "prettier --write",
       "git add"
-    ]
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
     ]
   }
 }
