--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
     "prompts": "^2.0.4",
+    "stoppable": "^1.1.0",
     "yaml": "^1.5.0",
     "yargs": "^13.2.4"
   },
