--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
+    "express": "^4.17.1",
     "prompts": "^2.0.4",
     "stoppable": "^1.1.0",
     "yaml": "^1.5.0",
