--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "chalk": "^2.4.2",
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
+    "ms": "^2.1.2",
     "prompts": "^2.0.4",
     "stoppable": "^1.1.0",
+    "ws": "^7.0.1",
     "yaml": "^1.5.0",
     "yargs": "^13.2.4"
   },
@@ -36,6 +38,7 @@
     "@types/prompts": "^1.2.0",
     "@types/yaml": "^1.0.2",
     "@types/yargs": "^13.0.0",
+    "akita-ws": "^0.1.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
