--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
     "@types/prompts": "^1.2.0",
+    "@types/supertest": "^2.0.7",
     "@types/yaml": "^1.0.2",
     "@types/yargs": "^13.0.0",
     "akita-ws": "^0.1.1",
@@ -50,7 +51,11 @@
     "jest": "^24.7.1",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "prettier": {
     "semi": false,
