--- a/package.json
+++ b/package.json
@@ -22,35 +22,35 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "ms": "^2.1.2",
-    "prompts": "^2.0.4",
+    "prompts": "^2.1.0",
     "stoppable": "^1.1.0",
-    "ws": "^7.0.1",
-    "yaml": "^1.5.0",
+    "ws": "^7.1.0",
+    "yaml": "^1.6.0",
     "yargs": "^13.2.4"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.0",
-    "@types/prompts": "^1.2.0",
-    "@types/supertest": "^2.0.7",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.2",
+    "@types/prompts": "^2.0.1",
+    "@types/supertest": "^2.0.8",
     "@types/yaml": "^1.0.2",
     "@types/yargs": "^13.0.0",
     "akita-ws": "^0.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.3.1",
-    "jest": "^24.7.1",
-    "lint-staged": "^8.1.5",
-    "nodemon": "^1.18.10",
-    "prettier": "1.16.4",
+    "husky": "^3.0.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
     "supertest": "^4.0.2"
   },
   "jest": {
