--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "yargs": "^13.2.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/ms": "^0.7.31",
@@ -40,6 +41,7 @@
     "@types/prompts": "^2.0.1",
     "@types/stoppable": "^1.1.0",
     "@types/supertest": "^2.0.8",
+    "@types/ws": "^6.0.3",
     "@types/yaml": "^1.0.2",
     "@types/yargs": "^13.0.2",
     "akita-ws": "^0.1.1",
