--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dashund",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "robb-j/dashund",
   "author": "Rob Anderson (https://r0b.io)",
   "license": "MIT",
@@ -14,13 +15,15 @@
     "prettier": "prettier --write '**/*.{js,ts,tsx,json,css,md}'",
     "start": "node -r dotenv/config dist/index.js",
     "test": "jest",
-    "dev": ""
+    "dev:cli": "npm run build &> /dev/null; node example/cli.js"
   },
   "keywords": [],
   "engines": {
     "node": ">=8"
   },
   "dependencies": {
+    "ajv": "^6.10.2",
+    "ajv-keywords": "^3.4.1",
     "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
@@ -58,6 +61,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist/"
