:bug: Fix preversion script
No longer git add-ing "dist"

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "lint": "npx tsc --noEmit",
     "coverage": "jest --coverage",
-    "preversion": "npm test -s && npm run build && git add dist",
+    "preversion": "npm test -s && npm run build",
     "prettier": "prettier --write '**/*.{js,ts,tsx,json,css,md}'",
     "start": "node -r dotenv/config dist/index.js",
     "test": "jest",
