--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "node": ">=8"
   },
   "dependencies": {
-    "ajv": "^6.12.0",
-    "ajv-keywords": "^3.4.1",
-    "chalk": "^2.4.2",
+    "chalk": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -37,25 +35,25 @@
     "yargs": "^13.2.4"
   },
   "devDependencies": {
-    "@robb_j/md-toc": "^0.3.0",
+    "@robb_j/md-toc": "^0.3.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^25.1.4",
     "@types/ms": "^0.7.31",
-    "@types/node": "^12.7.4",
+    "@types/node": "^13.9.1",
     "@types/prompts": "^2.0.5",
     "@types/stoppable": "^1.1.0",
     "@types/supertest": "^2.0.8",
-    "@types/ws": "^6.0.3",
+    "@types/ws": "^7.2.2",
     "@types/yaml": "^1.2.0",
-    "@types/yargs": "^13.0.2",
-    "akita-ws": "^0.1.1",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.2.5",
-    "nodemon": "^1.19.2",
+    "@types/yargs": "^15.0.4",
+    "akita-ws": "^0.1.2",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3",
     "yorkie": "^2.0.0"
@@ -80,8 +78,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,json,css,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
